WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109423
[QT] Regression (
r142444
): Broke qt linux minimal build
https://bugs.webkit.org/show_bug.cgi?id=109423
Summary
[QT] Regression (r142444): Broke qt linux minimal build
Alexander Shalamov
Reported
2013-02-11 06:17:43 PST
r142444
breaks builds with disabled SVG feature.
Attachments
Patch 1
(1.51 KB, patch)
2013-02-11 06:48 PST
,
Alexander Shalamov
no flags
Details
Formatted Diff
Diff
Patch 2
(1.35 KB, patch)
2013-02-11 06:57 PST
,
Alexander Shalamov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexander Shalamov
Comment 1
2013-02-11 06:48:01 PST
Created
attachment 187559
[details]
Patch 1 - fix for builds that have SVG disabled
Alexander Shalamov
Comment 2
2013-02-11 06:57:21 PST
Created
attachment 187562
[details]
Patch 2 - rebased to master
WebKit Review Bot
Comment 3
2013-02-11 07:46:06 PST
Comment on
attachment 187562
[details]
Patch 2 Clearing flags on attachment: 187562 Committed
r142472
: <
http://trac.webkit.org/changeset/142472
>
WebKit Review Bot
Comment 4
2013-02-11 07:46:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug