[QT] Regression (r142444): Broke qt linux minimal build https://bugs.webkit.org/show_bug.cgi?id=109423

Patch by Alexander Shalamov <alexander.shalamov@intel.com> on 2013-02-11
Reviewed by Kenneth Rohde Christiansen.

Test: cssom/cssvalue-comparison.html

* css/CSSValue.cpp:
(WebCore::CSSValue::equals):

Canonical link: https://commits.webkit.org/127713@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142472 268f45cc-cd09-0410-ab3c-d52691b4dbfc